--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,8 +1,18 @@
 <h1>Foods Up, Wut!</h1>
 
 <a href="#hello" data-toggle="modal" class="btn btn-default">HELLO</a>
+<a href="#create-event" data-toggle="modal" class="btn btn-success">Create Event</a>
+<%= render('events/new_modal') %>
 
 <div id="calendar">
+
+</div>
+
+<div id="restaurants">
+
+</div>
+
+<div id="noms">
 
 </div>
 
