--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,5 @@
 <h1>Foods Up, Wut!</h1>
+<p>welcome to my food app!</p>
 
 <a href="#hello" data-toggle="modal" class="btn btn-default">HELLO</a>
 <a href="#create-event" data-toggle="modal" class="btn btn-success">Create Event</a>
