--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Foods Up, Wut!</h1>
-<p>welcome to my food app!</p>
-<p>yo</p>
+<p>Welcome to my food app!</p>
+<p>Nach Yo Cheese</p>
 
 <a href="#hello" data-toggle="modal" class="btn btn-default">HELLO</a>
 <a href="#create-event" data-toggle="modal" class="btn btn-success">Create Event</a>
@@ -24,7 +24,7 @@ aria-labelledby="hello-modal-label" aria-hidden="true">
         <h4>Hello Modal</h4>
       </div>
       <div class="modal-body">
-        <p>Yo Yo!</p>
+        <p>Why aren't my modals working.</p>
       </div>
     </div>
   </div>
