--- a/app/views/notification_mailer/contact_form.html.erb
+++ b/app/views/notification_mailer/contact_form.html.erb
@@ -1,4 +1,4 @@
-<h1>Contact Request</h1>
+<h1 style="font-weight:normal;color:blue;">Contact Request</h1>
 <% @params.each_pair do |key, value| %>
   <p><%= key %> -- <%= value %></p>
 <% end %>
