--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Foods Up, Wut!</h1>
 <p>Welcome to my food app!</p>
 <p>Nach Yo Cheese</p>
-
+<a href="report_path" class="btn btn-info">Send Report</a>
 <a href="#hello" data-toggle="modal" class="btn btn-default">HELLO</a>
 <a href="#create-event" data-toggle="modal" class="btn btn-success">Create Event</a>
 <%= render('events/new_modal') %>
