--- a/app/views/noms/index.html.erb
+++ b/app/views/noms/index.html.erb
@@ -1,5 +1,5 @@
 <%= link_to 'Home', root_path %>
-<a href="<%= new_nom_path %>" class="btn btn-success btn-lg
+<a href="<%= new_restaurant_nom_path %>" class="btn btn-success btn-lg
 pull-right"><span class="fa fa-plus"></span>New Nom</a>
 <h1 class="page-header">Listing noms</h1>
 
@@ -8,6 +8,7 @@ pull-right"><span class="fa fa-plus"></span>New Nom</a>
     <tr>
       <th>Name</th>
       <th>Delicious</th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,8 +18,9 @@ pull-right"><span class="fa fa-plus"></span>New Nom</a>
       <tr>
         <td><%= nom.name %></td>
         <td><%= nom.delicious %></td>
-        <td><%= link_to 'Show', nom %></td>
-        <td><%= link_to 'Edit', edit_nom_path(nom) %></td>
+        <td><%= link_to('View Photos', nom_photos_path(nom.id)) %></td>
+        <td><%= link_to 'Show', restaurant_nom_path(@restaurant.id, nom.id) %></td>
+        <td><%= link_to 'Edit', edit_restaurant_nom_path(@restaurant.id, nom.id) %></td>
         <td><%= link_to content_tag(:i, '', class: 'fa fa-trash-o'), nom, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
       </tr>
     <% end %>
