--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,8 +3,10 @@
 <table>
   <thead>
     <tr>
+      <th></th>
       <th>Name</th>
       <th>Address</th>
+      <th>Noms</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,8 +14,10 @@
   <tbody>
     <% @restaurants.each do |restaurant| %>
       <tr>
+        <td><%= image_tag(restaurant.logo.url(:thumb)) %></td>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.address %></td>
+        <td><%= link_to('View Noms', restaurant_noms_path(restaurant.id)) %></td>
         <td><%= link_to 'Show', restaurant %></td>
         <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
         <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
