--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <%= image_tag(@restaurant.logo.url(:normal))%>
+</p>
+
+<p>
   <strong>Name:</strong>
   <%= @restaurant.name %>
 </p>
