makes changes to javascript

--- a/app/views/noms/index.html.erb
+++ b/app/views/noms/index.html.erb
@@ -18,10 +18,10 @@ pull-right"><span class="fa fa-plus"></span>New Nom</a>
       <tr>
         <td><%= nom.name %></td>
         <td><%= nom.delicious %></td>
-        <td><%= link_to('View Photos', nom_photos_path(nom.id)) %></td>
+        <td><%= link_to("View #{pluralize(nom.photos.count, 'Photo')}", nom_photos_path(nom.id)) %></td>
         <td><%= link_to 'Show', restaurant_nom_path(@restaurant.id, nom.id) %></td>
         <td><%= link_to 'Edit', edit_restaurant_nom_path(@restaurant.id, nom.id) %></td>
-        <td><%= link_to content_tag(:i, '', class: 'fa fa-trash-o'), nom, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+        <td><%= link_to content_tag(:i, '', class: 'fa fa-trash-o'),restaurant_nom_path(@restaurant.id, nom.id) , method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
