--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -8,6 +8,7 @@
 
 <div class="row">
   <% @photos.each do |photo| %>
+    <% next if photo.image.blank? %>
     <div class="col-sm-3">
       <%= image_tag(photo.image.url(:big)) %>
     </div>
