--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>Foodie</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application' %>
   <%= csrf_meta_tags %>
 </head>
   <body>
@@ -11,5 +10,7 @@
     <div class="container">
       <%= yield %>
     </div>
+    <script src="jquery.min.js"></script>
+    <%= javascript_include_tag 'application' %>
   </body>
 </html>
